# looping-engineering

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  PATTERNS.md  REPORT.md
docs/paper/: loop-engineering-brief.tex  loop-engineering.tex
examples/punchlist/: impl.py  punchlist.loop.yaml
loopeng/: __init__.py  cli.py  spec.py  stops.py
onloop/: __init__.py  cli.py  contracts.py  runtime.py  spec.py  state.py  types.py
schema/: loop.schema.json
schema/examples/: make-tests-green.loop.yaml
tests/: test_runtime.py
