[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loopeng"
version = "0.0.1"
description = "A contracts-first framework for loop engineering: design the system that prompts the agent, not the prompt."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["loop-engineering", "agents", "harness", "llm", "orchestration"]
# The contracts (loopeng.contracts/types) are import-free; the runtime CLI
# needs PyYAML to load specs. Kept minimal on purpose.
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["jsonschema>=4.0", "pytest>=8.0"]

[project.scripts]
loopeng = "loopeng.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["loopeng"]
